Bug 22302 - Xephyr doesn't update evdev keyboard LEDs
Summary: Xephyr doesn't update evdev keyboard LEDs
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xephyr (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Matthew Allum
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-15 12:29 UTC by Mikhail Krivtsov
Modified: 2016-02-24 00:04 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch for xorg-server-1.5.3 kdrive/Xephyr with workaround for broken LEDs (1.99 KB, patch)
2009-06-15 12:29 UTC, Mikhail Krivtsov
no flags Details | Splinter Review

Description Mikhail Krivtsov 2009-06-15 12:29:27 UTC
Created attachment 26820 [details] [review]
patch for xorg-server-1.5.3 kdrive/Xephyr with workaround for broken LEDs

I am playing with multiseat. I have nvidia dualhead video card with two
monitors and ps/2 to usb converter for keyboard and mouse. I use evdev with
Xephyr to run second seat. When I hit NumLock or CapsLock on Xephyr's keyboard, keyboard itself works as expected but LEDs are not updated and always stay in off state.
I am unable to track down the real reason of the problem, but attached patch provides usable workaround.
Comment 1 Laércio de Sousa 2016-02-24 00:04:28 UTC
Fixed in commit 0461bca0cb2f7918c77ed45d2cbc756cf65021be.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.